[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/missile.png" type="Texture" id=1]
[ext_resource path="res://scripts/MissileV2.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.25, 10 )

[node name="Missile" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="UpdateNavigationTimer" type="Timer" parent="."]
wait_time = 0.04

[node name="SmokeCloudTimer" type="Timer" parent="."]
wait_time = 0.75

[connection signal="timeout" from="UpdateNavigationTimer" to="." method="_on_Update_Navigation_Timer_timeout"]
[connection signal="timeout" from="SmokeCloudTimer" to="." method="_on_SmokeCloudTimer_timeout"]
